finish quote generator

--- a/basic-front-end/quote-generator/main.html
+++ b/basic-front-end/quote-generator/main.html
@@ -20,19 +20,25 @@
 
 <!--local stylesheet -->
 <link rel="stylesheet" href="css/style.css">
+<!-- load google font -->
+<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
   
   </head>
   
- <body>
+<body>
   <div class="container">
     <div class="row text-center">
       <h1>Richie's Random Quote Generator</h1>
       <p>These are some of my favorite quotes. I hope you enjoy!</p>
-      <p>Click the button below to display a new quote</p>
+     <p>Click the button below to display a new quote</p>
+      
       <button type="button" class="btn btn-default" id="quote-gen">
         New Quote</button>
+      <a id="tweet-button-link" href=""> <button type="button" class="btn btn-default" id="quote-tweet">
+       Tweet Quote</button></a>
       <div id="quote-pad"></div>
     </div>
   </div>
   
-<body>
+</body>
+</html>
