finish working version of single player tic tac toe

--- a/intermediate-front-end/TicTacToe/main.html
+++ b/intermediate-front-end/TicTacToe/main.html
@@ -11,11 +11,11 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <!-- local twoPlayer file -->
-  <script src="js/twoPlayer.js"></script>
+  <!-- local twoPlayer file
+  <script src="js/twoPlayer.js"></script>-->
 
-  <!-- local singlePlayervfile
-  <script src="js/singlePlayer.js"></script> -->
+  <!-- local singlePlayervfile-->
+  <script src="js/singlePlayer.js"></script> 
 
   <!--local stylesheet -->
   <link rel="stylesheet" href="css/style.css">
