edit simon js file

--- a/intermediate-front-end/simon/main.html
+++ b/intermediate-front-end/simon/main.html
@@ -47,21 +47,23 @@
       </div>
     </div>
     <div class="top row">
-      <div class="top-left" id="0">
+      <div class="top-left gameButton" id="0">
       </div>
-      <div class="top-right" id="1">
+      <div class="top-right gameButton" id="1">
       </div>
     </div>
-    <div class="top row">
-      <div class="bottom-left" id="2" >
+    <div class="bottom row">
+      <div class="bottom-left gameButton" id="2" >
       </div>
-      <div class="bottom-right" id="3">
+      <div class="bottom-right gameButton" id="3">
       </div>
     </div>
 
   </div>
 
-  
+  <p class="full-circle"></p>
+
+
 
 </body>
 </html>
